<resources>
    <string name="IS_SIGNUP_LOGIN_UI_SCROLLABLE">false</string>
    <string name="please_choose_a_language">Please choose a language</string>
    <string name="welcome_to_motoblur">Welcome to MOTOBLUR</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="make_emergency_call_by_pressing_menu">To make an emergency call during setup, press the \"Menu\" key.</string>
    <string name="sign_up_or_login_main_text">You will need a MOTOBLUR account to use essential services on your phone as well as the MOTOBLUR Internet portal.</string>
    <string name="login_to_your_motoblur_account">Login to your MOTOBLUR account</string>
    <string name="motoblur_id_colon">MOTOBLUR ID:</string>
    <string name="password_colon">Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="new_blur_name_title">New account</string>
    <string name="new_blur_name_text">"Let's create your new account:

Please enter your full name."</string>
    <string name="new_blur_name_text2">Your name is used to store your contact information in the device phonebook.</string>
    <string name="new_blur_name_hint">Enter first and last name</string>
    <string name="new_blur_email_title">Email address</string>
    <string name="new_blur_email_text1">Enter the address of one of your existing email accounts. This will become your MOTOBLUR accountID.</string>
    <string name="new_blur_email_text2">MOTOBLUR uses this address to send you important service information. Motorola will not share this address or send spam email.</string>
    <string name="new_blur_password_title">Password</string>
    <string name="new_blur_password_text1">Create a password for your new MOTOBLUR account.</string>
    <string name="new_blur_password_text2">You will use the password along with the email address whenever you need to log into your MOTOBLUR account.</string>
    <string name="new_blur_repeat_password_hint">Confirm password</string>
    <string name="your_name_colon">Your name:</string>
    <string name="write_blur_id_password">Please write down your MOTOBLUR ID and your password and keep it in a safe place for future reference.</string>
    <string name="motoblur_agreement">MOTOBLUR agreement</string>
    <string name="motoblur_review_the_above">Please review the MOTOBLUR Terms and Conditions by tapping the link above. By selecting I agree checkbox, you agree to the terms of the MOTOBLUR Software License Agreement, Terms of Service and Privacy Statement. You must agree to these terms in order to use this service.</string>
    <string name="motorola_mobile_service">You are about to connect to MOTOBLUR. This service allows you to access and manage a variety of content.</string>
    <string name="motoblur_terms_of_service">MOTOBLUR Terms of Service</string>
    <string name="end_user_license_agreement">MOTOBLUR End User License Agreement</string>
    <string name="moto_service_review_the_above">Please review the Motorola Mobile Services Terms and Conditions by tapping the link above. By selecting the \"I agree\" checkbox, you agree to the terms of the Motorola Mobile Services Software License Agreement, Terms of Service and Privacy Statement. You must agree to these terms in order to use this service.</string>
    <string name="moto_service_terms_of_service">View Terms and Conditions</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="moto_service_license_agreement">Motorola Service End User License Agreement</string>
    <string name="moto_service_intro">"You are about to connect to Motorola Mobile Services. This service allows you to access and manage a variety of online services.
"</string>
    <string name="moto_service_agreement">Motorola Service Agreement</string>
    <string name="terms_of_service_check_caption">I agree</string>
    <string name="downloading_terms">Downloading terms…</string>
    <string name="done_reading">Done reading</string>
    <string name="confirm_motoblur_account">Confirm MOTOBLUR account:</string>
    <string name="creating_your_blur_account">Creating your MOTOBLUR account</string>
    <string name="service_setup_intro_title">Your MOTOBLUR account has been created successfully</string>
    <string name="service_setup_intro_text">"Now let's set up your new phone to access your email, contacts, photo and social networking sites."</string>
    <string name="service_chooser_intro_title">Set up existing accounts</string>
    <string name="service_chooser_background_intro_title">Setup accounts</string>
    <string name="service_chooser_intro_text">If you use any of the services below, tap the icon to set it up or long press the icon for more details</string>
    <string name="service_chooser_background_intro_text">If you use any of the services below, tap the icon to set it up.</string>
    <string name="service_credentials_header_text">Enter your existing {0} account:</string>
    <string name="max_accounts_delete_option">You can only have one active {0} account at a time. Would you like to remove the existing account?</string>
    <string name="delete_option">Would you like to remove the {0} account?</string>
    <string name="max_accounts_no_delete_option">Only one account for {0} can be added.</string>
    <string name="max_accounts_no_del_single_acc">You can only have one active {0} service account at a time.</string>
    <string name="google_login_title">Add a Google account</string>
    <string name="google_login_txt">In order to send and receive emails with Gmail, synchronize your Google Contacts or download applications from Android Market, please sign back into your Google account.</string>
    <string name="google_login_txt_german_region">In order to send and receive emails with Google Mail, synchronize your Google Contacts or download applications from Android Market, please sign backinto your Google account.</string>
    <string name="skip">Skip</string>
    <string name="blur_password_verifier_title">Enter password</string>
    <string name="blur_password_verifier_text">To change your MOTOBLUR ID, please enter your password.</string>
    <string name="generic_carrier_contact_text">Please call customer service to retrieve your password.</string>
    <string name="change_blur_email_text">"Please make sure that your new MOTOBLUR ID is an email account that you have access to. 

MOTOBLUR uses this address to send you a confirmation email which you will need to verify your account. 
Motorola will not share this address or send spam emails."</string>
    <string name="updating_blur_account">Updating your MOTOBLUR account</string>
    <string name="motoblur">MOTOBLUR</string>
    <string name="change_motoblur_password">Change MOTOBLUR password</string>
    <string name="change_motoblur_id">Change MOTOBLUR ID</string>
    <string name="account_mismatch">AccountMismatch</string>
    <string name="account_mismatch_text">"Your MOTOBLUR ID does not match your current password. This happens if you change your password on the MOTOBLUR portal, but not the device. 
Please update your phone with the new password you entered in the MOTOBLUR portal."</string>
    <string name="motoblur_email_conf_txt1">Your MOTOBLUR ID was successfully changed to:</string>
    <string name="motoblur_email_conf_txt2">"Your password has not changed.

The MOTOBLUR service sent a confirmation email to above address.
"</string>
    <string name="motoblur_email_conf_txt3">"
Within the next 24 hours, please open the email and follow the instructions to confirm your MOTOBLUR account."</string>
    <string name="motoblur_password_conf_txt">"Your MOTOBLUR password was successfully updated. 

Please make sure to write down your new password and keep it in a safe place along with your MOTOBLUR ID for future reference."</string>
    <string name="dummy_password">********</string>
    <string name="conf_email_sent">Confirmation email sent</string>
    <string name="email_resent_conf_dialog_text">"The MOTOBLUR service sent a confirmation email to:

{0}

Within the next 24 hours, please open the email and follow the instructions to confirm your MOTOBLUR account."</string>
    <string name="unverified_motoblur_account">Unverified MOTOBLUR account</string>
    <string name="unverified_account_verify_txt1">After you created your MOTOBLUR account the service sent you a confirmation email to your account address:</string>
    <string name="unverified_account_verify_txt2">"This email contains a link that you need to click in order to verify your account. Please open the email and follow the instructions to complete the account verification. 

If you cannot access the above email address, please click \"Change MOTOBLUR ID\" to enter a new account name with an email address that you have access to."</string>
    <string name="unverified_account_resend_txt">If the address is correct but you have not received the email, please click \"Resend email\".</string>
    <string name="resend_email">Resend email</string>
    <string name="success">Success!</string>
    <string name="friendfeed_capabilities_text">"Now you can catch all of your friends' {0} updates in the Social Networking app. 

The Social Networking app brings together updates, uploaded photos, friend requests, and more from all of the major networks into a single app! 

Add a Social Networking widget to the Home Screen to see {0} updates from all of your friends -- or just the inner circle.
"</string>
    <string name="social_messaging_capabilities_text">"Access your {0} Inbox in the universal Messaging app. New messages appear in your inbox automatically. 

The Motorola Messaging widget also shows the latest unread text messages, emails, and social networking messages all together in a single stream - or you can pick and choose accounts."</string>
    <string name="messaging_capabilities_text">"Access your {0} Inbox in the universal Messaging app. New emails appear in your inbox automatically. 

The Motorola Messaging widget also shows the latest unread text messages, emails, and social networking messages all together in a single stream - or you can pick and choose accounts."</string>
    <string name="pictures_capabilities_text">"Now you can easily share photos with family and friends using your {0} account. 

Whether you're snapping new pictures with the Camera or enjoying them in the Picture Gallery, uploading photos to {0} is a breeze."</string>
    <string name="service_credentials_google_text">Privacy policies for use of Google and Android services can be found under Settings/About Phone/Legal Information/Google legal.</string>
    <string name="welcome_text">Your Blur account will automatically feed your friends latest profile pictures and status into every call, message and contact.</string>
    <string name="username_colon">Username:</string>
    <string name="blur_phone">Setup Blur Device</string>
    <string name="server">Server:</string>
    <string name="auto_download_settings">Automatically configure account</string>
    <string name="simswap_signin_instruction">"SIM card is removed or changed.
Log in to your MOTOBLUR account to unlock."</string>
    <string name="domain_colon">Domain:</string>
    <string name="domain_optional">Domain (optional)</string>
    <string name="username_optional">Enter username</string>
    <string name="blur_account_setup">Blur Account Setup</string>
    <string name="add_accounts">Add Accounts</string>
    <string name="factory_data_reset">Factory Data Reset</string>
    <string name="having_problems_logging">Having problems logging in?</string>
</resources>