<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/new_account_group" android:background="@drawable/fsba_brand_nologo" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_gravity="left" android:id="@id/simswap_signin_instruction" android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/simswap_signin_instruction" style="@style/AccSetTextView" />
            <TextView android:id="@id/email_text" android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/motoblur_id_colon" style="@style/AccSetTextViewMedium" />
            <EditText android:id="@id/email" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_email_address" android:singleLine="true" android:layout_weight="1.0" android:inputType="textEmailAddress" />
            <TextView android:id="@id/password_text" android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/password_colon" style="@style/AccSetTextViewMedium" />
            <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_password" android:singleLine="true" android:inputType="textPassword" />
            <TextView android:id="@id/having_problems_logging" android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:visibility="gone" android:text="@string/having_problems_logging" style="@style/AccSetTextViewMedium" />
            <Button android:textSize="@dimen/AccSet_textViewSizeMd" android:id="@id/forgot_password" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/AccSet_button_hspacing" android:layout_marginRight="@dimen/AccSet_button_hspacing" android:layout_marginBottom="@dimen/AccSet_button_vspacing" android:text="@string/forgot_password" />
            <Button android:textSize="@dimen/AccSet_textViewSizeMd" android:id="@id/factory_data_reset" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/AccSet_button_hspacing" android:layout_marginRight="@dimen/AccSet_button_hspacing" android:text="@string/factory_data_reset" />
        </LinearLayout>
    </ScrollView>
    <com.motorola.android.widget.ActionBar android:id="@id/abwidget" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</LinearLayout>
