<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/fsba_brand_nologo" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@blur.res:dimen/content_area_left_padding" android:paddingTop="@blur.res:dimen/content_area_top_padding" android:paddingRight="@blur.res:dimen/content_area_right_padding" android:paddingBottom="@blur.res:dimen/content_area_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:paddingBottom="@dimen/h1_spacing" android:text="@string/unverified_account_verify_txt1" style="@style/ListItemTxtB" />
            <TextView android:id="@id/motoblur_id" android:paddingBottom="@dimen/h1_spacing" style="@style/ListItemTxtA" />
            <TextView android:paddingBottom="@dimen/h1_spacing" android:text="@string/unverified_account_verify_txt2" style="@style/ListItemTxtB" />
            <Button android:layout_gravity="center" android:id="@id/change_motoblur_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/h1_spacing" android:text="@string/change_motoblur_id" />
            <TextView android:paddingBottom="@dimen/h1_spacing" android:text="@string/unverified_account_resend_txt" style="@style/ListItemTxtB" />
            <Button android:layout_gravity="center" android:id="@id/resend_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/resend_email" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
