<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/fsba_brand_nologo" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.motorola.blur.setup.ProgressBadge android:id="@id/progress_badge" android:layout_width="fill_parent" android:layout_height="wrap_content" app:step="0" app:text="@string/blur_account_setup" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="left" android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/new_blur_name_title" style="@style/AccSetTextView.Title" />
                <TextView android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/new_blur_name_text" style="@style/AccSetTextViewMedium" />
                <EditText android:id="@id/new_blur_name_edit" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/new_blur_name_hint" android:singleLine="true" android:inputType="textPersonName|textCapWords|textNoSuggestions">
                    <requestFocus />
                </EditText>
                <TextView android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/new_blur_name_text2" style="@style/AccSetTextViewMedium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.motorola.android.widget.ActionBar android:id="@id/abwidget" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</LinearLayout>
