<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/service_credentials_group" android:background="@drawable/fsba_brand_nologo" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <com.motorola.blur.setup.ProgressBadge android:id="@id/progress_badge" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:step="1" app:text="@string/add_accounts" />
    <TextView android:gravity="left" android:layout_gravity="left" android:id="@id/service_credentials_intro_text" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_marginTop="@dimen/AccSet_topSpacing" android:layout_marginBottom="@dimen/AccSet_topSpacing" android:drawablePadding="@dimen/AccSet_hspacing" style="@style/AccSetTextView" />
    <WebView android:autoLink="all" android:id="@id/service_cred_oauth_layout" android:focusable="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <ScrollView android:id="@id/service_cred_edit_scroll_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/service_credentials_username_text" android:text="@string/username_colon" style="@style/FormItemTxt.A" />
                <AutoCompleteTextView android:textColor="@blur.res:color/black" android:id="@id/service_credentials_username_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textEmailAddress" android:imeOptions="actionNext">
                    <requestFocus />
                </AutoCompleteTextView>
                <TextView android:id="@id/service_credentials_password_text" android:text="@string/password_colon" style="@style/FormItemTxt.A" />
                <EditText android:id="@id/service_credentials_password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_password" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionDone" />
                <TextView android:id="@id/service_credentials_activesync_domain_text" android:visibility="gone" android:text="@string/domain_colon" style="@style/FormItemTxt.A" />
                <EditText android:id="@id/service_credentials_activesync_domain_edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/domain_optional" android:singleLine="true" android:inputType="textUri" android:imeOptions="actionNext" />
                <TextView android:id="@id/service_credentials_activesync_username_text" android:visibility="gone" android:text="@string/username_colon" style="@style/FormItemTxt.A" />
                <EditText android:id="@id/service_credentials_activesync_username_edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/username_optional" android:singleLine="true" android:inputType="textUri" android:imeOptions="actionDone" />
                <TextView android:id="@id/service_credentials_google_text" android:visibility="gone" android:text="@string/service_credentials_google_text" android:singleLine="false" style="@style/FormItemTxt.A" />
                <TextView android:id="@id/service_credentials_activesync_server_text" android:visibility="gone" android:text="@string/server" style="@style/FormItemTxt.A" />
                <EditText android:id="@id/service_credentials_activesync_server_edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textUri" android:imeOptions="actionDone" />
                <CheckBox android:id="@id/service_credentials_auto_check" android:visibility="gone" android:text="@string/auto_download_settings" android:singleLine="false" style="@style/FormItemTxt.A" />
                <TextView android:id="@id/service_credentials_verifying_text" android:paddingTop="13.0px" android:lines="2" style="@style/FormItemTxt.A" />
            </LinearLayout>
            <View android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <com.motorola.android.widget.ActionBar android:id="@id/abwidgetin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
        </LinearLayout>
    </ScrollView>
    <com.motorola.android.widget.ActionBar android:id="@id/abwidgetout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</LinearLayout>
