<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/confirm_account_group" android:background="@drawable/fsba_brand_nologo" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.motorola.blur.setup.ProgressBadge android:id="@id/progress_badge" android:layout_width="fill_parent" android:layout_height="wrap_content" app:step="0" app:text="@string/blur_account_setup" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="left" android:id="@id/confirm_account_instructions" android:paddingBottom="@dimen/AccSet_vspacing" android:text="@string/confirm_motoblur_account" style="@style/AccSetTextView.Title" />
                <TextView android:textSize="@dimen/AccSet_textViewSizeMd" android:layout_gravity="left" android:id="@id/confirm_account_name_title" android:text="@string/your_name_colon" style="@style/AccSetTextView" />
                <TextView android:layout_gravity="left" android:id="@id/confirm_account_name" android:paddingBottom="@dimen/AccSet_v2spacing" style="@style/AccSetTextView" />
                <TextView android:textSize="@dimen/AccSet_textViewSizeMd" android:layout_gravity="left" android:id="@id/confirm_account_email_title" android:paddingBottom="@blur.res:dimen/formitem_vspacing" android:text="@string/motoblur_id_colon" style="@style/AccSetTextView" />
                <TextView android:layout_gravity="left" android:id="@id/confirm_account_email" android:paddingBottom="@dimen/AccSet_v2spacing" style="@style/AccSetTextView" />
                <TextView android:textSize="@dimen/AccSet_textViewSizeMd" android:layout_gravity="bottom|left|center" android:id="@id/write_down_blur_id_password" android:text="@string/write_blur_id_password" style="@style/AccSetTextView" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.motorola.android.widget.ActionBar android:id="@id/abwidget" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</LinearLayout>
